src/App.css
.heading {
  text-align: center;
  font-size: 1.9375em;
  font-weight: bold;
  margin-bottom: 7px;
}

.description {
  margin-top: 0px;
}

.start-quiz-btn {
  padding: 16px 28px;
  border: none;
  background-color: #4d5b9e;
  border-radius: 10px;
  color: #f5f7fb;
  width: 193px;
  font-size: 1em;
  margin-top: 10px;
}
.quiz-container {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 550px;
}
div#root {
  display: flex;
  align-items: center;
  justify-content: center;
}
.splash-container {
  display: flex;
  flex-direction: column;
}
button.answer-btn {
    font-size: 12px;
    padding: 4px 15px;
    border-radius: 5px;
    border: 2px solid #4D5B9E;
    background-color: white;
    color: #293264;
    font-weight: 600;
    cursor: pointer;
}
button.answer-btn:hover,button.selected {
    background-color: #D6DBF5;
    border: none;
}

.btn-container{
    display: flex;
    gap: 13px;
}
.seperator {
    margin-top: 15px;
    border-top: 1px solid #DBDEF0;
}
.check-btn {
    border: none;
    background-color: #4D5B9E;
    color: #F5F7FB;
    padding: 11px 22px;
    border-radius: 5px;
    font-weight: 600;
    margin-top: 20px;
}
.check-container {
    display: flex;
    align-items: center;
    justify-content: center;
}

